添加数据文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8083
-#server.servlet.context-path=/server
+server.servlet.context-path=/server
 ledai.prefix=wx
 #mybatis别名包
 mybatis.type-aliases-package=net.le.baseframe.core.entity
